feat: add personal info

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -11,5 +11,5 @@
       </a>
     </li>
   </ul>
-  <p class="copy">Built From Scratch With &#10084;&#65039;. © Copyright 2023, Simon G Software. All Rights Reserved.</p>
+  <p class="copy">Built From Scratch With &#10084;&#65039;. © Copyright {{date.getFullYear()}}, Simon G Software. All Rights Reserved.</p>
 </footer>
