--- a/src/app/components/person/person.component.html
+++ b/src/app/components/person/person.component.html
@@ -1,14 +1,14 @@
 <section class="personStart">
   <div class="imgeContainer">
     <img
-      src="https://media.licdn.com/dms/image/D4E03AQF51AaVcNMHdA/profile-displayphoto-shrink_200_200/0/1673727829399?e=1694649600&v=beta&t=mgPFACY6NtwwC6EhzyNWxZkGis9PnCfZds5mg_Gfiws"
-      alt="me">
+      src={{image}}
+      alt={{name}}>
   </div>
   <div>
-    <p class="name">Hi There! I'm Simon.</p>
-    <p class="title">A Software Engineer. I Help Startups <span class="text_gradient">Launch</span>, Create <span
+    <p class="name">{{hi}}</p>
+    <p class="title">A Full Stack Developer. I Help Startups <span class="text_gradient">Launch</span>, Create <span
         class="text_gradient">Shops</span> And <span class="text_gradient">Grow</span> Their Products.</p>
-    <p class="description">I have more than four years of experience as a software engineer. Regarded as a hands-on and
+    <p class="description">I have many years of experience as a software engineer. Regarded as a hands-on and
       successful developer with experience managing cross-functional teams in a time-constrained environment to deliver
       projects on time and on budget.</p>
   </div>
