--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,7 +1,7 @@
 footer {
   text-align: center;
   padding: 0.5em 0;
-  background-color: #fff;
+  background-color: rgb(255, 255, 255, 0.7);
   .contact{
     display: flex;
     justify-content: center;
