--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,7 +14,7 @@ body {
   padding: 0;
   position: relative;
   box-sizing: border-box;
-  background-color: #eee;
+  background-color: white;
   font-size: 20px;
   font-family: monospace, monospace;
 }
@@ -48,61 +48,6 @@ body {
 
 /* End Parpadeo */
 
-/* Musgrove */
-
-.text {
-  fill: none;
-  stroke-width: 6;
-  stroke-linejoin: round;
-  stroke-dasharray: 70 330;
-  stroke-dashoffset: 0;
-  -webkit-animation: stroke 6s infinite linear;
-  animation: stroke 6s infinite linear;
-}
-
-.text:nth-child(5n + 1) {
-  stroke: #F2385A;
-  -webkit-animation-delay: -1.2s;
-  animation-delay: -1.2s;
-}
-.text:nth-child(5n + 2) {
-  stroke: #F5A503;
-  -webkit-animation-delay: -2.4s;
-  animation-delay: -2.4s;
-}
-
-.text:nth-child(5n + 3) {
-  stroke: #E9F1DF;
-  -webkit-animation-delay: -3.6s;
-  animation-delay: -3.6s;
-}
-
-.text:nth-child(5n + 4) {
-  stroke: #56D9CD;
-  -webkit-animation-delay: -4.8s;
-  animation-delay: -4.8s;
-}
-
-.text:nth-child(5n + 5) {
-  stroke: #3AA1BF;
-  -webkit-animation-delay: -6s;
-  animation-delay: -6s;
-}
-
-@-webkit-keyframes stroke {
-  100% {
-    stroke-dashoffset: -400;
-  }
-}
-
-@keyframes stroke {
-  100% {
-    stroke-dashoffset: -400;
-  }
-}
-
-/* end Musgrove */
-
 /* write machine*/
 
 /*
@@ -126,14 +71,12 @@ animation: typing 2s steps(12), blink 0.5s step-end infinite alternate;
 
 @keyframes gradientMotion {
   0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
+    filter: hue-rotate(0deg);
   }
   100% {
-    background-position: 0% 50%;
+    filter: hue-rotate(360deg);
   }
 }
 
 /* end gradient motion */
+
