feat: mail componenet

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-
 <app-home></app-home>
-
+<span class="alert" [ngClass]="typeAlert" *ngIf="showAlert">{{messageAlert}}</span>
 <app-footer></app-footer>
