--- a/src/app/components/contactme/contactme.component.scss
+++ b/src/app/components/contactme/contactme.component.scss
@@ -40,5 +40,9 @@ section {
     &:hover {
       opacity: 0.8;
     }
+    &.disabled {
+      background: #ccc;
+      cursor: not-allowed;
+    }
   }
 }
